@@ -108,6 +108,16 @@ operator|=
 name|wrapped
 expr_stmt|;
 block|}
+DECL|method|getDelegate
+specifier|public
+name|Directory
+name|getDelegate
+parameter_list|()
+block|{
+return|return
+name|delegate
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|listAll
